--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebAppRazorClient</title>
+    <title>@ViewData["Title"] - WebAppRazorSandwitchClient</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebAppRazorClient.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WebAppRazorSandwitchClient.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WebAppRazorClient</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">WebAppRazorSandwitchClient</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,8 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/SwList">Sandwich List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/SwList">SandwitchList</a>
                         </li>
+
                     </ul>
                 </div>
             </div>
@@ -41,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - WebAppRazorClient - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - WebAppRazorSandwitchClient - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
