--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@page
-@model IndexModel
+@model WebAppRazorSandwitchClient.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Hello, @Model.UserEmail 👋</p>
+    <p>
+        Learn about <a href="https://learn.microsoft.com/aspnet/core">
+            building Web apps with ASP.NET Core
+        </a>.
+    </p>
+    <a class="btn btn-danger" asp-page="/Account/Logout">Logout</a>
 </div>
