--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,22 +29,26 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/SwList">Sandwitch List</a>
-                        </li>
-                    </ul>
 
-                    <!-- Right side of navbar -->
-                    <ul class="navbar-nav">
+                        @* Show Sandwich List only if user is logged in *@
                         @{
                             var isLoggedIn = HttpContextAccessor.HttpContext?.Session.GetString("IsLoggedIn") == "true";
                             var userEmail = HttpContextAccessor.HttpContext?.Session.GetString("UserEmail");
                         }
-
                         @if (isLoggedIn && !string.IsNullOrEmpty(userEmail))
                         {
                             <li class="nav-item">
-                                <span class="nav-link text-dark">@userEmail</span> <!-- ✅ Show logged-in Gmail -->
+                                <a class="nav-link text-dark" asp-area="" asp-page="/SwList">Sandwich List</a>
+                            </li>
+                        }
+                    </ul>
+
+                    <!-- Right side of navbar -->
+                    <ul class="navbar-nav">
+                        @if (isLoggedIn && !string.IsNullOrEmpty(userEmail))
+                        {
+                            <li class="nav-item">
+                                <span class="nav-link text-dark">@userEmail</span> <!-- Show logged-in email -->
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-page="/Account/Logout">Logout</a>
